--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. 
    Explore o mundo na sua velocidade com a Bikcraft.">
-	<link rel="preload" href="./css/style.css" as="style">
-	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="icon" href="./favicon.svg" type="image/svg+xml">
+	<link rel="preload" href="./css/style.min.css" as="style">
+	<link rel="stylesheet" type="text/css" href="./css/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 	<title>Bikcraft</title>
+	<script>document.documentElement.classList.add("js")</script>
 </head>
 
 <body id="home" ;>
@@ -34,12 +36,12 @@
 	<main class="introducao-bg">
 		<div class="introducao container">
 			<div class="introducao-conteudo">
-				<h1 class="font-1-xxl cor-01">Bicicletas feitas
-					sob medida<span class="cor-p1">.</span></h1>
-				<p class="font-2-l cor-05">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-				<a class="button" href="./bicicletas.html">Escolha a sua </a>
+				<h1 class="font-1-xxl cor-01 fadeInLeft" data-anime="400">Bicicletas feitas
+					sob medida<span class="cor-p1" data-anime="500">.</span></h1>
+				<p class="font-2-l cor-05 fadeInLeft" data-anime="500">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+				<a class="button fadeInLeft" data-anime="600" href="./bicicletas.html">Escolha a sua </a>
 			</div>
-			<picture>
+			<picture data-anime="700">
 				<source media="(max-width:800px)" srcset="./img/bicicletas/nimbus.jpg">
 				<img src="./img/fotos/introducao.jpg" alt="introducao">
 			</picture>
@@ -199,7 +201,7 @@
 	</footer>
 
 
-
+	<script src="./js/plugins/simple-anime.js"></script>
 	<script src="./js/script.js"></script>
 </body>
 
