--- a/bicicleta/magic.html
+++ b/bicicleta/magic.html
@@ -7,12 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. 
    Explore o mundo na sua velocidade com a Bikcraft.">
-  <link rel="preload" href="../css/style.css" as="style">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="preload" href="../css/style.min.css" as="style">
+  <link rel="stylesheet" href="../css/style.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <title>Magic Might| Bikcraft</title>
+  <script>document.documentElement.classList.add("js")</script>
 </head>
 
 <body id="bicicleta">
@@ -34,18 +35,18 @@
 
   <main class="titulo-bg">
     <div class="titulo container">
-      <p class="font-2-xl cor-05">R$ 2499</p>
-      <h1 class="font-1-xxl cor-01">Magic Might
+      <p class="font-2-xl cor-05 fadeInDown" data-anime="500">R$ 2499</p>
+      <h1 class="font-1-xxl cor-01 fadeInUp" data-anime="500">Magic Might
         <span class="cor-p1">.</span>
       </h1>
     </div>
-    <div class="bicicleta container">
+    <div class="bicicleta container fadeInLeft" data-anime="600">
       <div class="bicicleta-imagem">
         <img src="../img/bicicleta/magic.jpg" alt="Bicicleta1" srcset="">
         <img src="../img/bicicleta/nebula.jpg" alt="Bicicleta2" srcset="">
         <img src="../img/bicicleta/nimbus-1.jpg" alt="Bicicleta3" srcset="">
       </div>
-      <div class="bicicleta-conteudo">
+      <div class="bicicleta-conteudo fadeInRight" data-anime="600">
         <p class="font-2-l cor-01">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
           <a href="../orcamento.html?tipo=bikcraf&value=magic" class="button">Comprar Agora</a>
@@ -162,7 +163,7 @@
       <p class="copy font-2-m cor-09">BIkcraft © alguns direitos reservados.</p>
     </div>
   </footer>
-
+  <script src="../js/plugins/simple-anime.js"></script>
   <script src="../js/script.js"></script>
 </body>
 
