--- a/bicicletas.html
+++ b/bicicletas.html
@@ -7,12 +7,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. 
    Explore o mundo na sua velocidade com a Bikcraft.">
-	<link rel="preload" href="./css/style.css" as="style">
-	<link rel="stylesheet" href="./css/style.css">
+	<link rel="preload" href="./css/style.min.css" as="style">
+	<link rel="icon" href="./favicon.svg" type="image/svg+xml">
+	<link rel="stylesheet" href="./css/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 	<title>Bicicletas | Bikcraft</title>
+
+	<script>document.documentElement.classList.add("js")</script>
 </head>
 
 <body>
@@ -35,20 +38,20 @@
 	<main>
 		<div class="titulo-bg">
 			<div class="titulo container">
-				<p class="font-2-l-b cor-05">escolha a melhor para você</p>
-				<h1 class="font-1-xxl cor-01">nossas bicicletas<span class="cor-p1">.</span>
+				<p class="font-2-l-b cor-05 fadeInLeft" data-anime="400">escolha a melhor para você</p>
+				<h1 class="font-1-xxl cor-01 fadeInLeft" data-anime="500">nossas bicicletas<span class="cor-p1">.</span>
 				</h1>
 			</div>
 		</div>
 
-		<div class="bicicletas container">
-			<div class="bicicletas-imagem">
-				<img src="./img/bicicletas/nimbus.jpg" alt="" srcset="">
+		<div class="bicicletas container fadeInLeft" data-anime="600">
+			<div class=" bicicletas-imagem">
+				<img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta Nimbus" srcset="">
 				<span class="font-2-m cor-01">R$ 4999</span>
 			</div>
-			<div class="bicicletas-conteudo">
+			<div class="bicicletas-conteudo fadeInLeft" data-anime="700">
 				<h2 class="font-1-xl">Nimbus Stark</h2>
-				<p class="font-2-s cor-08">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+				<p class=" font-2-s cor-08">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
 				<ul class="font-1-m cor-08">
 					<li>
 						<img src="./img/icones/eletrica.svg" alt="">
@@ -72,12 +75,12 @@
 		</div>
 
 		<div class="bicicletas-bg">
-			<div class="bicicletas container">
+			<div class="bicicletas container fadeInLeft" data-anime="700">
 				<div class="bicicletas-imagem">
 					<img src="./img/bicicletas/nebula.jpg" alt="" srcset="">
 					<span class="font-2-m cor-01">R$ 3999</span>
 				</div>
-				<div class="bicicletas-conteudo">
+				<div class="bicicletas-conteudo fadeInLeft" data-anime="800">
 					<h2 class="font-1-xl cor-01">Nebula Cosmic</h2>
 					<p class="font-2-s cor-06">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
 					<ul class="font-1-m cor-06">
@@ -104,13 +107,13 @@
 		</div>
 
 
-		<div class="bicicletas container">
+		<div class="bicicletas container fadeInLeft" data-anime="800">
 			<div class="bicicletas-imagem">
 				<img src="./img/bicicletas/magic.jpg" alt="" srcset="">
 				<span class="font-2-m cor-01">R$ 2499</span>
 			</div>
-			<div class="bicicletas-conteudo">
-				<h2 class="font-1-xs ">Magic Might</h2>
+			<div class="bicicletas-conteudo fadeInLeft" data-anime="900">
+				<h2 class="font-1-xl">Magic Might</h2>
 				<p class="font-2-s cor-08">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
 				<ul class="font-1-m cor-08">
 					<li>
@@ -176,6 +179,7 @@
 		</div>
 	</footer>
 
+	<script src="./js/plugins/simple-anime.js"></script>
 	<script src="./js/script.js"></script>
 </body>
 
