--- a/contato.html
+++ b/contato.html
@@ -7,12 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. 
    Explore o mundo na sua velocidade com a Bikcraft.">
-  <link rel="preload" href="./css/style.css" as="style">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="preload" href="./css/style.min.css" as="style">
+  <link rel="stylesheet" href="./css/style.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <title>Contato | Bikcraft</title>
+  <script>document.documentElement.classList.add("js")</script>
 </head>
 
 <body id="contato">
@@ -35,13 +37,13 @@
   <main>
     <div class="titulo-bg">
       <div class="titulo container">
-        <p class="font-2-l-b cor-05">respostas em ate 24h</p>
-        <h1 class="font-1-xxl cor-01">nosso contato
+        <p class="font-2-l-b cor-05 fadeInLeft" data-anime="400">respostas em ate 24h</p>
+        <h1 class="font-1-xxl cor-01  fadeInLeft" data-anime="500">nosso contato
           <span class="cor-p1">.</span>
         </h1>
       </div>
     </div>
-    <div class="contact container">
+    <div class="contact container fadeInDown" data-anime="800">
       <section class="contato-dados" aria-label="endereço">
         <h2 class="font-1-m cor-01">Loja Online</h2>
         <div class="contato-endereço font-2-s cor-04">
@@ -166,7 +168,7 @@
       <p class="copy font-2-m cor-09">BIkcraft © alguns direitos reservados.</p>
     </div>
   </footer>
-
+  <script src="./js/plugins/simple-anime.js"></script>
   <script src="./js/script.js"></script>
 </body>
 
