--- a/orcamento.html
+++ b/orcamento.html
@@ -7,8 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. 
    Explore o mundo na sua velocidade com a Bikcraft.">
-  <link rel="preload" href="./css/style.css" as="style">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="preload" href="./css/style.min.css" as="style">
+  <link rel="stylesheet" href="./css/style.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
@@ -35,8 +36,8 @@
   <main>
     <div class="titulo-bg">
       <div class="titulo container">
-        <p class="font-2-l-b cor-05">cotações no seu email</p>
-        <h1 class="font-1-xxl cor-01">solicite um orçamento
+        <p class="font-2-l-b cor-05 fadeInLeft" data-anime="400">cotações no seu email</p>
+        <h1 class="font-1-xxl cor-01 fadeInLeft" data-anime="400">solicite um orçamento
           <span class="cor-p1">.</span>
         </h1>
       </div>
@@ -202,6 +203,7 @@
       <p class="copy font-2-m cor-09">BIkcraft © alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="./js/plugins/simple-anime.js"></script>
   <script src="./js/script.js"></script>
 </body>
 
