--- a/orcamento.html
+++ b/orcamento.html
@@ -23,7 +23,8 @@
         <img src="./img/bikcraft 1.svg" alt="Bicicleta eletrica preta">
       </a>
 
-      <nav aria-label="primaria">
+      <nav data-menu="nav" aria-label="primaria">
+        <button class="font-1-m cor-01" data-menu="mobile" aria-expanded="false" aria-controls="menu">Menu</button>
         <ul class="header-menu font-1-m cor-01">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
@@ -204,7 +205,7 @@
     </div>
   </footer>
   <script src="./js/plugins/simple-anime.js"></script>
-  <script src="./js/script.js"></script>
+  <script type="module" src="./js/script.js"></script>
 </body>
 
 </html>
