--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
 	<script>document.documentElement.classList.add("js")</script>
 </head>
 
-<body id="home" ;>
+<body id="home">
 	<header class="header-bg">
 		<div class="header container">
 			<a href="./">
 				<img src="./img/bikcraft 1.svg" alt="Bicicleta eletrica preta">
 			</a>
 
-			<nav aria-label="primaria">
+			<nav data-menu="nav" aria-label="primaria">
+
+				<button class="font-1-m cor-01" data-menu="mobile" aria-expanded="false" aria-controls="menu">Menu</button>
 				<ul class="header-menu font-1-m cor-01">
 					<li><a href="./bicicletas.html">Bicicletas</a></li>
 					<li><a href="./seguros.html">Seguros</a></li>
@@ -202,7 +204,7 @@
 
 
 	<script src="./js/plugins/simple-anime.js"></script>
-	<script src="./js/script.js"></script>
+	<script type="module" src="./js/script.js"></script>
 </body>
 
 </html>
